syntax = "proto3";
option go_package = ".;main";

message ChunkMessage {
	uint32 chunkIndex = 1;
	uint32 worldSizeX = 2;
	uint32 worldSizeY = 3;
	repeated TickMessage ticks = 4;
}

message TickMessage {
	uint64 tickIndex = 1;
	repeated BotMessage bots = 2;
}

message BotMessage {
	uint64 index = 1;
	uint32 coordX = 2;
	uint32 coordY = 3;
	uint32 energy = 4;
	bytes genome = 5;
  	repeated OrganMessage organs = 6; 
}

message OrganMessage {
  uint64 parentBotIndex = 1;
	uint64 organIndex = 2;
	uint32 coordX = 3;
	uint32 coordY = 4;
	bytes genome = 5;
}